<resources>
    <string name="app_name">Tugas 2 Kalkulator</string>
    <string name="ce">CE</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="distribution">:</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="times">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="coma">.</string>
    <string name="togheter_with">=</string>
</resources>